--- a/index.html
+++ b/index.html
@@ -202,13 +202,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://my-project-delta-navy.vercel.app/login'"
+                onclick="location.href='https://github.com/Blank-Brain-Check/my-project'"
               >
                 Github
-              </button>
+              </button> 
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/Blank-Brain-Check/my-project'"
+                onclick="location.href='https://my-project-delta-navy.vercel.app/login'"
               >
                 Live Demo
               </button>
@@ -250,13 +250,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/Blank-Brain-Check/calculator'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://blank-brain-check.github.io/calculator/'"
               >
                 Live Demo
               </button>
@@ -289,7 +289,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/toshith-shetty-1ab615210/">LinkedIn</a></p>
         </div>
       </div>
     </section>
